force-app/main/default/objects/Gong__Gong_Call__c/Gong__Gong_Call__c.object-meta.xml
<CustomObject>
    <label>Conversation</label>
    <nameField>
        <label>Conversation Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>