force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Call_End__c.field-meta.xml
<CustomField>
    <fullName>Gong__Call_End__c</fullName>
    <label>Ended</label>
    <type>DateTime</type>
</CustomField>