force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Call_Start__c.field-meta.xml
<CustomField>
    <fullName>Gong__Call_Start__c</fullName>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>