force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Direction__c.field-meta.xml
<CustomField>
    <fullName>Gong__Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>