force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Is_Private__c.field-meta.xml
<CustomField>
    <fullName>Gong__Is_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>