force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Opp_Close_Date_Time_Of_Call__c.field-meta.xml
<CustomField>
    <fullName>Gong__Opp_Close_Date_Time_Of_Call__c</fullName>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>