force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Opp_Probability_Time_Of_Call__c.field-meta.xml
<CustomField>
    <fullName>Gong__Opp_Probability_Time_Of_Call__c</fullName>
    <label>Opportunity Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>