force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Playbook_match__c.field-meta.xml
<CustomField>
    <fullName>Gong__Playbook_match__c</fullName>
    <label>Playbook match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>