force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Pricing_Duration__c.field-meta.xml
<CustomField>
    <fullName>Gong__Pricing_Duration__c</fullName>
    <label>Pricing Duration</label>
    <summarizedField>Gong__Topic__c.Gong__Topic_Duration_Sec__c</summarizedField>
    <summaryFilterItems>
        <field>Gong__Topic__c.Name</field>
        <operation>equals</operation>
        <value>Pricing</value>
    </summaryFilterItems>
    <summaryForeignKey>Gong__Topic__c.Gong__Gong_Interaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>