force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Gong__Primary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gong Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>