force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Primary_User__c.field-meta.xml
<CustomField>
    <fullName>Gong__Primary_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>