force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Related_Trackers_json__c.field-meta.xml
<CustomField>
    <fullName>Gong__Related_Trackers_json__c</fullName>
    <label>Related Trackers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>