force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__scheduled__c.field-meta.xml
<CustomField>
    <fullName>Gong__scheduled__c</fullName>
    <label>Scheduled</label>
    <type>DateTime</type>
</CustomField>