force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Scope__c.field-meta.xml
<CustomField>
    <fullName>Gong__Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>