force-app/main/default/objects/Gong__Gong_Call__c/fields/Gong__Talk_Time_Them__c.field-meta.xml
<CustomField>
    <fullName>Gong__Talk_Time_Them__c</fullName>
    <label>Talk Time Them</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>